syntax = "proto3";
package command;

message Environment {
  string shell = 1;
  string os = 2;
}

message Command {
  string command = 1;
  string timestamp = 2;
  string timestamp1 = 3;
  string timestamp2 = 4;
  string timestamp3 = 5;
  string user = 6;
  Environment environment = 7;
}
